syntax = "proto3";

import "lib/openstreetmap.proto";

package Search;

service Search {
  rpc Query(QueryParameters) returns (stream SearchResult);
}

message QueryParameters {
  string query = 1;
}

message SearchResult {
  int64 id = 1;
  OpenStreetMap.Member.Type type = 2;
}
